<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="@color/main">

    <ImageButton
        android:background="@android:color/transparent"
        android:id="@+id/back_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        />

    <TextView
        android:id="@+id/thong_tin_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/infor"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toEndOf="@+id/back_main"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        tools:text="Tháng 9, 2021"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_main" />

    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/layout_date"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:id="@+id/rcw_day_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Spinner
        android:id="@+id/spn_time_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_main" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_linear_pj"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rcw_day_3"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/misstion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misstion"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:autofillHints="@string/nd_edt"
                android:id="@+id/edt_misstion_replace"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_bgk_misstion"
                android:gravity="top"
                android:hint="@string/nd_edt"
                android:inputType="textMultiLine"
                android:maxLines="40"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/misstion" />

            <TextView
                android:id="@+id/tv_time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_misstion_replace" />

            <TextView
                android:id="@+id/tv_time_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/end"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toEndOf="@+id/tv_time_start"
                app:layout_constraintTop_toBottomOf="@id/edt_misstion_replace" />

            <LinearLayout

                android:id="@+id/linear_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/tv_time_end">

                <TextView
                    android:id="@+id/time_start_replace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_bgk_misstion"
                    android:drawableEnd="@drawable/ic_hour"
                    android:padding="8dp"
                    tools:text="15:00"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_end_replace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_bgk_misstion"
                    android:drawableEnd="@drawable/ic_hour"
                    android:padding="8dp"
                    tools:text="15:00"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/importance"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_time" />

            <LinearLayout
                android:baselineAligned="false"
                android:id="@+id/liner_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/priority">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/quan_trong_replace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_bgk_priority_1"
                        android:gravity="center"
                        android:padding="24dp"
                        android:text="@string/qtrong"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/kquan_trong_replace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/custom_bgk_priority_3"
                        android:gravity="center"
                        android:padding="24dp"
                        android:text="@string/kqtrong"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/khan_cap_replace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_bgk_priority_3"
                        android:gravity="center"
                        android:padding="24dp"
                        android:text="@string/kcap"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/kkhan_cap_replace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/custom_bgk_priority_2"
                        android:gravity="center"
                        android:padding="24dp"
                        android:text="@string/kkcap"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/remind"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/liner_priority" />

            <RelativeLayout
                android:id="@+id/rlt_reimder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_bgk_misstion"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/reminder">

                <ImageView
                    android:id="@+id/alarm_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp"
                    android:src="@drawable/ic_alarm_clock" />

                <Spinner

                    android:id="@+id/spiner_minute_replace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/alarm_icon"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="-12dp" />

                <TextView
                    android:id="@+id/alarm_tv_replace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spiner_minute_replace"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_alarm_bl"
                    android:drawablePadding="8dp"
                    android:text="@string/alarm" />

                <TextView
                    android:id="@+id/notifi_tv_replace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spiner_minute_replace"
                    android:layout_alignStart="@id/alarm_tv_replace"
                    android:layout_marginStart="193dp"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_notifi_bl"
                    android:drawablePadding="8dp"
                    android:text="@string/notifi" />

                <TextView
                    android:id="@+id/kpi_tv_replace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/alarm_tv_replace"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/kpi_bl"
                    android:drawablePadding="8dp"
                    android:text="@string/evalute" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlt_reimder" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>